# sensorfusion_bm_mult2b

./: .gitignore  CMakeLists.txt  GCCToolchain.cmake  GNUARMGCCToolchain.cmake  MCUXpressoGCCToolchain.cmake  README.md  build_all.bat  build_all.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  sensorfusion_bm_mult2b.mex
pc_application/: collect_data.py  parse_data.py
pc_application/fs_sensor_fusion/: angular_velocity.py  debug.py  euler_angles.py  factory.py  kalman.py  magnetic.py  main.py  precision_accelerometer.py  shared.py
sensor_fusion/: sensor_fusion.c  sensor_fusion.h
source/: main_baremetal.c
